--- a/src/assets/less/main.less
+++ b/src/assets/less/main.less
@@ -1,4 +1,6 @@
-@import './confilg.less';
+@import './config.less';
 @import './normalize.less';
 @import './reElement.less';
 @import './inconfont.less';
+
+.c-w100 {width: 100px;}
