--- a/src/assets/less/config.less
+++ b/src/assets/less/config.less
@@ -18,9 +18,10 @@
 
 
 //header threm
-@headerBorder: #46b5d1 solid 1px;
+@headerBorder: #46b5d1 solid 0px;
 @headerBgColor: #71a95a;
 @headerFontColor: #FFFFFF;
+@headerBoxShadow: 0px 1px shade(@headerBgColor, 10%);
 
 :export {
   
