--- a/src/assets/less/main.less
+++ b/src/assets/less/main.less
@@ -4,7 +4,10 @@
 @import './inconfont.less';
 
 .c-w100 {width: 100px;}
+.c-w300 {width: 300px;}
+
 .c-ml10 {margin-left: 10px;}
+.c-ml20 {margin-left: 10px;}
 
 .input-w300 {width: 380px;}
 
