--- a/src/assets/less/main.less
+++ b/src/assets/less/main.less
@@ -4,7 +4,10 @@
 @import './inconfont.less';
 
 .c-w100 {width: 100px;}
+.c-w150 {width: 150px;}
 .c-w300 {width: 300px;}
+
+.c-wv80 {width: 80%;}
 
 .c-ml10 {margin-left: 10px;}
 .c-ml20 {margin-left: 10px;}
@@ -12,3 +15,5 @@
 .input-w300 {width: 380px;}
 
 .c-clickIcon {cursor: pointer;}
+
+.c-tr {text-align: right;}
